--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-csstree-validator": "^1.8.0",
-    "stylelint-scss": "^3.17.2"
+    "stylelint-scss": "^3.17.2",
+    "webpack": "^5.21.2",
+    "webpack-cli": "^4.5.0"
   },
   "scripts": {
     "format": "npx prettier  --write '**/*.{html,js,json,md,json,yaml,yml,jsx}'",
@@ -23,5 +25,17 @@
     "stylelint:check": "npx stylelint \"**/*.css\"",
     "eslint": "npx eslint . --fix",
     "eslint:check": "npx eslint ."
-  }
+  },
+  "description": "> One paragraph statement about the project.",
+  "main": "main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bimbolabuari/odin-restuarant-js.git"
+  },
+  "author": "bimbolabuari",
+  "license": "LICENSE",
+  "bugs": {
+    "url": "https://github.com/bimbolabuari/odin-restuarant-js/issues"
+  },
+  "homepage": "https://github.com/bimbolabuari/odin-restuarant-js#readme"
 }
