--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "webpack-cli": "^4.5.0"
   },
   "scripts": {
-    "format": "npx prettier  --write '**/*.{html,js,json,md,json,yaml,yml,jsx}'",
-    "format:check": "npx prettier  --check '**/*.{html,js,json,md,json,yaml,yml}'",
+    "format": "npx prettier  --write \"**/*.{html,js,json,md,json,yaml,yml,jsx}\"",
+    "format:check": "npx prettier  --check \"**/*.{html,js,json,md,json,yaml,yml}\"",
     "lint": "npx stylelint \"**/*.css\" --fix && npx eslint . --fix",
     "lint:check": "npx stylelint \"**/*.css\" && npx eslint .",
     "stylelint": "npx stylelint \"**/*.css\" --fix",
