--- a/package.json
+++ b/package.json
@@ -4,17 +4,30 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-plugin-import": "^2.20.2",
-    "prettier": "1.18.2",
-    "stylelint": "^13.3.3",
+    "copy-webpack-plugin": "^5.0.5",
+    "css-loader": "^3.2.0",
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "file-loader": "^6.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.8.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "prettier": "1.19.1",
+    "style-loader": "^1.0.0",
+    "stylelint": "^12.0.0",
+    "stylelint-config-prettier": "^6.0.0",
     "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-csstree-validator": "^1.8.0",
-    "stylelint-scss": "^3.17.2",
-    "webpack": "^5.21.2",
-    "webpack-cli": "^4.5.0"
+    "stylelint-prettier": "^1.1.1",
+    "webpack": "^5.31.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.8.1",
+    "webpack-fix-style-only-entries": "^0.4.0",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "scripts": {
     "format": "npx prettier  --write \"**/*.{html,js,json,md,json,yaml,yml,jsx}\"",
@@ -24,13 +37,14 @@
     "stylelint": "npx stylelint \"**/*.css\" --fix",
     "stylelint:check": "npx stylelint \"**/*.css\"",
     "eslint": "npx eslint . --fix",
-    "eslint:check": "npx eslint ."
+    "eslint:check": "npx eslint .",
+    "webpack": "npx webpack"
   },
   "description": "> One paragraph statement about the project.",
   "main": "main.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bimbolabuari/odin-restuarant-js.git"
+    "url": "https://github.com/bimbolabuari/odin-restuarant-js.git"
   },
   "author": "bimbolabuari",
   "license": "LICENSE",
