--- a/package.json
+++ b/package.json
@@ -6,30 +6,33 @@
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.5",
     "css-loader": "^3.2.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.1.1",
     "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "html-webpack-plugin": "^5",
+    "mini-css-extract-plugin": "^1.4.1",
     "prettier": "1.19.1",
     "style-loader": "^1.0.0",
-    "stylelint": "^12.0.0",
-    "stylelint-config-prettier": "^6.0.0",
+    "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^3.0.0",
-    "stylelint-prettier": "^1.1.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.19.0",
     "webpack": "^5.31.2",
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.8.1",
     "webpack-fix-style-only-entries": "^0.4.0",
-    "workbox-webpack-plugin": "^4.3.1"
+    "workbox-webpack-plugin": "^6.1.2"
   },
   "scripts": {
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
+    "start:prod": "webpack-dev-server --mode production --open",
     "format": "npx prettier  --write \"**/*.{html,js,json,md,json,yaml,yml,jsx}\"",
     "format:check": "npx prettier  --check \"**/*.{html,js,json,md,json,yaml,yml}\"",
     "lint": "npx stylelint \"**/*.css\" --fix && npx eslint . --fix",
