--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "js-template",
+  "name": "odin-restuarant-page",
   "version": "0.1.0",
   "private": true,
   "dependencies": {},
@@ -25,7 +25,7 @@
     "webpack-bundle-analyzer": "^3.6.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.8.1",
-    "webpack-fix-style-only-entries": "^0.4.0",
+    "webpack-fix-style-only-entries": "^0.6.1",
     "workbox-webpack-plugin": "^6.1.2"
   },
   "scripts": {
